--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "code . && npm run dev",
     "lint": "next lint"
   },
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "mqtt": "^4.3.7",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
