--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && mv out foodie_out",
     "start": "code . && npm run dev",
     "lint": "next lint"
   },
